--- a/contact.html
+++ b/contact.html
@@ -434,13 +434,17 @@
         <div class="w-100"></div>
         <div class="col-md-3 d-flex">
           <div class="bg-light d-flex align-self-stretch box p-4">
-            <p><span>Address:</span> Plot No : 104, 1st Floor, Sree Nilayam, above Sampoorna Supermarket, near Harivillu
+            <p><span>Address:</span> Plot No : 204, 1st Floor, Sree Nilayam, above Sampoorna Supermarket, near Harivillu
               Road, Shivapuri Colony, Manikonda Jagir, Hyderabad, Telangana 500089</p>
           </div>
         </div>
         <div class="col-md-3 d-flex">
           <div class="bg-light d-flex align-self-stretch box p-4">
-            <p><span>Phone:</span> <a href="tel:+918886669086">+918886669086</a></p>
+            <p><span>Phone:</span> <a href="tel:+918886669086">+918886669086</a>
+              
+              <a href="tel:+918886669087"><span class="icon icon-phone"></span><span
+                class="text">+918886669087</span></a>
+            </p>
           </div>
         </div>
         <div class="col-md-3 d-flex">
@@ -469,10 +473,14 @@
             <h2 class="ftco-heading-2">Connect With Us!</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 104, 1st Floor, Sree Nilayam,
+                <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 204, 1st Floor, Sree Nilayam,
                     above Sampoorna Supermarket, near Harivillu Road, Shivapuri Colony, Manikonda Jagir, Hyderabad,
                     Telangana 500089</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+918886669086</span></a></li>
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+918886669086</span></a>
+                  
+                  <a href="tel:+918886669087"><span class="icon icon-phone"></span><span
+                    class="text">+918886669087</span></a>
+                </li>
                 <li><a href="#"><span class="icon icon-envelope"></span><span
                       class="text">Medvishospital@gmail.com</span></a></li>
               </ul>
@@ -519,7 +527,7 @@
         <div class="col-md">
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Opening Hours</h2>
-            <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>Mon to Sun - 09 AM to 09 PM</h3>
+            <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>9:00 To 9:00</h3>
           </div>
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Subscribe Us!</h2>
