--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
             </ul>
           </li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact Us</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
+          <li class="nav-item active"><a href="about.html" class="nav-link">About Us</a></li>
 
         </ul>
       </div>
@@ -668,7 +668,11 @@
                 <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 204, 1st Floor, Sree Nilayam,
                     above Sampoorna Supermarket, near Harivillu Road, Shivapuri Colony, Manikonda Jagir, Hyderabad,
                     Telangana 500089</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+918886669086</span></a></li>
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+918886669086</span></a>
+                  <a href="tel:+918886669087"><span class="icon icon-phone"></span><span
+                    class="text">+918886669087</span></a>
+                
+                </li>
                 <li><a href="#"><span class="icon icon-envelope"></span><span
                       class="text">Medvishospital@gmail.com</span></a></li>
               </ul>
