--- a/services/Preventive-Care.html
+++ b/services/Preventive-Care.html
@@ -79,7 +79,7 @@
               <li class="nav-item"><a href="../index.html" class="nav-link pl-0">Home</a></li>
               <li class="nav-item drop-down active">
     
-                <a href="#" class="nav-link">
+                <a href="#" class="nav-link active">
                   General Medicine
                   <i class="fa fa-angle-down desktop"></i>
     
@@ -377,8 +377,12 @@
                                         above Sampoorna Supermarket, near Harivillu Road, Shivapuri Colony, Manikonda
                                         Jagir, Hyderabad,
                                         Telangana 500089</span></li>
-                                <li><a href="tel:+918886669086"><span class="icon icon-phone"></span><span
-                                            class="text">+918886669086</span></a></li>
+                                           <li><a href="tel:+918886669086"><span class="icon icon-phone"></span><span
+                                            class="text">+918886669086</span></a>
+
+                                            <a href="tel:+918886669087"><span class="icon icon-phone"></span><span
+                                            class="text">+918886669087</span></a>
+                                        </li>
                                 <li><a href="mailto:Medvishospital@gmail.com"><span
                                             class="icon icon-envelope"></span><span
                                             class="text">Medvishospital@gmail.com</span></a></li>
