--- a/services/hair-transplantation.html
+++ b/services/hair-transplantation.html
@@ -299,13 +299,18 @@
                         <h2 class="ftco-heading-2">Connect With Us!</h2>
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 104, 1st
+                                <li><span class="icon icon-map-marker"></span><span class="text">Plot No : 204, 1st
                                         Floor, Sree Nilayam,
                                         above Sampoorna Supermarket, near Harivillu Road, Shivapuri Colony, Manikonda
                                         Jagir, Hyderabad,
                                         Telangana 500089</span></li>
                                 <li><a href="tel:+918886669086"><span class="icon icon-phone"></span><span
-                                            class="text">+918886669086</span></a></li>
+                                            class="text">+918886669086</span></a>
+                                        
+                                            <a href="tel:+918886669087"><span class="icon icon-phone"></span><span
+                                                class="text">+918886669087</span></a>
+                                        
+                                        </li>
                                 <li><a href="mailto:Medvishospital@gmail.com"><span
                                             class="icon icon-envelope"></span><span
                                             class="text">Medvishospital@gmail.com</span></a></li>
