--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <i class="fa fa-angle-down mobile"></i>
             <ul class="drop-items">
               <li class="nav-item">
-                <a href="/services/preventive-care.html">Preventive Care
+                <a href="./services/preventive-care.html">Preventive Care
 
                 </a>
               </li>
@@ -1028,11 +1028,11 @@
           <div class="ftco-footer-widget mb-5 ml-md-4">
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
-              <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
-              <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
-              <li><a href="services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-              <li><a href="services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
-              <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
+              <li><a href="../index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
+              <li><a href="../about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
+              <li><a href="../services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
+              <!-- <li><a href="../services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li> -->
+              <li><a href="../contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
             </ul>
           </div>
           <div class="">
@@ -1042,10 +1042,10 @@
         <div class="col-md ftco-footer-widget  mb-5 ml-md-4">
           <h2 class="ftco-heading-2">Services</h2>
           <ul class="list-unstyled">
-            <li><a href="./services/dental-services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Dental
-                Care</a></li>
-            <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General
-                Medicine</a></li>
+            <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General Medicine
+                </a></li>
+            <li><a href="./services/dental-services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Dental Care
+                </a></li>
             <li><a href="./services/hair-transplantation.html"><span
                   class="ion-ios-arrow-round-forward mr-2"></span>Hair
                 Transplantation</a>
