--- a/services/Gfc-Hair-Growth.html
+++ b/services/Gfc-Hair-Growth.html
@@ -75,7 +75,7 @@
           </button>
           <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav">
-              <li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
+              <li class="nav-item"><a href="../index.html" class="nav-link pl-0">Home</a></li>
               <li class="nav-item drop-down">
     
                 <a href="#" class="nav-link">
@@ -522,7 +522,12 @@
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">Opening Hours</h2>
-                        <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 9:00 To 9:00</h3>
+                        <!-- <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 9:00 To 9:00</h3> -->
+
+                        <h3 class="open-hours pl-1">
+                            <span class="ion-ios-time mr-3"></span>
+                            Mon to Sun - 09 AM to 09 PM
+                          </h3>
                     </div>
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">Subscribe Us!</h2>
