--- a/contact.html
+++ b/contact.html
@@ -454,7 +454,7 @@
         </div>
         <div class="col-md-3 d-flex">
           <div class="bg-light d-flex align-self-stretch box p-4">
-            <p><span>Website</span> <a href="https://www.medvishospital.com/">www.medvishospital.com</a></p>
+            <p><span>Website</span> <a href="https://www.medvishospital.com/">www.medvishospitals.com</a></p>
           </div>
         </div>
       </div>
@@ -527,7 +527,11 @@
         <div class="col-md">
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Opening Hours</h2>
-            <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>9:00 To 9:00</h3>
+            <!-- <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>9:00 To 9:00</h3> -->
+            <h3 class="open-hours pl-1">
+              <span class="ion-ios-time mr-3"></span>
+              Mon to Sun - 09 AM to 09 PM
+            </h3>
           </div>
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Subscribe Us!</h2>
