--- a/services/Fillings.html
+++ b/services/Fillings.html
@@ -481,14 +481,14 @@
                     <div class="ftco-footer-widget mb-5 ml-md-4">
                         <h2 class="ftco-heading-2">Links</h2>
                         <ul class="list-unstyled">
-                            <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
-                            <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a>
+                            <li><a href="../index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
+                            <li><a href="../about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a>
                             </li>
-                            <li><a href="services.html"><span
+                            <li><a href="../services.html"><span
                                         class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-                            <li><a href="services.html"><span
+                            <li><a href="../services.html"><span
                                         class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
-                            <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a>
+                            <li><a href="../contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -520,7 +520,11 @@
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">Opening Hours</h2>
-                        <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 9:00 To 9:00</h3>
+                        <!-- <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 9:00 To 9:00</h3> -->
+                        <h3 class="open-hours pl-1">
+                            <span class="ion-ios-time mr-3"></span>
+                            Mon to Sun - 09 AM to 09 PM
+                          </h3>
                     </div>
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">Subscribe Us!</h2>
