--- a/services/scaling-and-polishing.html
+++ b/services/scaling-and-polishing.html
@@ -519,8 +519,10 @@
                 <div class="col-md">
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">Opening Hours</h2>
-                        <h3 class="open-hours pl-4"><span class="ion-ios-time mr-3"></span>We are open 9:00 To 9:00</h3>
-                    </div>
+                        <h3 class="open-hours pl-1">
+                            <span class="ion-ios-time mr-3"></span>
+                            Mon to Sun - 09 AM to 09 PM
+                          </h3>
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">Subscribe Us!</h2>
                         <form action="mailto:Medvishospital@gmail.com" class="subscribe-form">
