--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <i class="fa fa-angle-down mobile"></i>
             <ul class="drop-items">
               <li class="nav-item">
-                <a href="./services/preventive-care.html">Preventive Care
+                <a href="/services/preventive-care.html">Preventive Care
 
                 </a>
               </li>
@@ -780,11 +780,11 @@
     });
   </script>
   <!--top-->
-  <section class="ftco-section" style="background-color: #16bca8;">
+  <!-- <section class="ftco-section" style="background-color: #16bca8;">
     <div class="container">
       <div class="row justify-content-center mb-5 pb-2">
         <div class="col-md-8 text-center heading-section ftco-animate">
-          <!-- <span class="subheading  text-white">Doctors</span> -->
+          <span class="subheading  text-white">Doctors</span>
           <h2 class="mb-4  text-white">Our Qualified Doctors</h2>
           <p class="text-white">Experience superior healthcare at our Multi-Speciality Clinics, where our qualified
             doctors lead a cutting-edge Surgical & Laparoscopy Center, ensuring comprehensive and advanced medical care
@@ -801,8 +801,8 @@
               <h3>Dr. Srikanth Dasari</h3>
               <span class="position mb-2">Cosmetic Dental Surgeon & Root Canal & Smile Designing Expert</span>
               <div class="faded">
-                <!-- <p>Transform your smile with our expert Cosmetic Dental Surgeon, specializing in Root Canal and Smile
-                  Designing.</p> -->
+                <p>Transform your smile with our expert Cosmetic Dental Surgeon, specializing in Root Canal and Smile
+                  Designing.</p>
 
               </div>
             </div>
@@ -818,7 +818,7 @@
               <h3>Dr. Chaitanya Kiran K</h3>
               <span class="position mb-2">M.B.B.S, MD General Medicine</span>
               <div class="faded">
-                <!-- <p>Expertise in M.B.B.S and MD General Medicine - Compassionate care for optimal health.</p> -->
+                <p>Expertise in M.B.B.S and MD General Medicine - Compassionate care for optimal health.</p>
 
               </div>
             </div>
@@ -833,7 +833,7 @@
               <h3>Dr. Sandeep B</h3>
               <span class="position mb-2">M.B.B.S, Ms. Ortho, DNB, FIJR, FIRJR, FIMOAI</span>
               <div class="faded">
-                <!-- <p>Expertise in M.B.B.S, MS Ortho, DNB, FIJR, FIRJR, FIMOAI – delivering exceptional care.</p> -->
+                <p>Expertise in M.B.B.S, MS Ortho, DNB, FIJR, FIRJR, FIMOAI – delivering exceptional care.</p>
 
               </div>
             </div>
@@ -857,7 +857,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="videos pb-2 container">
     <div class="row justify-content-center mb-2 pb-2">
       <div class="col-md-8 text-center heading-section ftco-animate">
@@ -1028,11 +1028,11 @@
           <div class="ftco-footer-widget mb-5 ml-md-4">
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
-              <li><a href="../index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
-              <li><a href="../about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
-              <li><a href="../services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-              <!-- <li><a href="../services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li> -->
-              <li><a href="../contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
+              <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
+              <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
+              <li><a href="services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
+              <li><a href="services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
+              <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
             </ul>
           </div>
           <div class="">
@@ -1042,10 +1042,10 @@
         <div class="col-md ftco-footer-widget  mb-5 ml-md-4">
           <h2 class="ftco-heading-2">Services</h2>
           <ul class="list-unstyled">
-            <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General Medicine
-                </a></li>
-            <li><a href="./services/dental-services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Dental Care
-                </a></li>
+            <li><a href="./services/dental-services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Dental
+                Care</a></li>
+            <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General
+                Medicine</a></li>
             <li><a href="./services/hair-transplantation.html"><span
                   class="ion-ios-arrow-round-forward mr-2"></span>Hair
                 Transplantation</a>
