--- a/about.html
+++ b/about.html
@@ -287,11 +287,11 @@
       </div>
     </div>
   </section>
-  <section class="ftco-section" style="background-color: #16bca8;">
+  <!-- <section class="ftco-section" style="background-color: #16bca8;">
     <div class="container">
       <div class="row justify-content-center mb-5 pb-2">
         <div class="col-md-8 text-center heading-section ftco-animate">
-          <!-- <span class="subheading  text-white">Doctors</span> -->
+          <span class="subheading  text-white">Doctors</span>
           <h2 class="mb-4  text-white">Our Qualified Doctors</h2>
           <p class="text-white">Experience superior healthcare at our Multi-Speciality Clinics, where our qualified
             doctors lead a cutting-edge Surgical & Laparoscopy Center, ensuring comprehensive and advanced medical care
@@ -308,14 +308,14 @@
               <h3>Dr. Srikanth Dasari</h3>
               <span class="position mb-2">Cosmetic Dental Surgeon & Root Canal & Smile Designing Expert</span>
               <div class="faded">
-                <!-- <p>Transform your smile with our expert Cosmetic Dental Surgeon, specializing in Root Canal and Smile
-                  Designing.</p> -->
+                <p>Transform your smile with our expert Cosmetic Dental Surgeon, specializing in Root Canal and Smile
+                  Designing.</p>
 
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
+        </div> -->
+        <!-- <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="staff">
             <div class="img-wrap d-flex align-items-stretch">
               <div class="img align-self-stretch"
@@ -324,8 +324,8 @@
             <div class="text p-3 text-center">
               <h3>Dr. Chaitanya Kiran K</h3>
               <span class="position mb-2">M.B.B.S, MD General Medicine</span>
-              <div class="faded">
-                <!-- <p>Expertise in M.B.B.S and MD General Medicine - Compassionate care for optimal health.</p> -->
+              <div class="faded"> -->
+                <!-- <p>Expertise in M.B.B.S and MD General Medicine - Compassionate care for optimal health.</p>
 
               </div>
             </div>
@@ -340,7 +340,7 @@
               <h3>Dr. Sandeep B</h3>
               <span class="position mb-2">M.B.B.S, Ms. Ortho, DNB, FIJR, FIRJR, FIMOAI</span>
               <div class="faded">
-                <!-- <p>Expertise in M.B.B.S, MS Ortho, DNB, FIJR, FIRJR, FIMOAI – delivering exceptional care.</p> -->
+                <p>Expertise in M.B.B.S, MS Ortho, DNB, FIJR, FIRJR, FIMOAI – delivering exceptional care.</p>
 
               </div>
             </div>
@@ -499,7 +499,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="videos pb-2">
     <h3 class="work-videos text-center mb-4">Work Videos</h3>
     <div class="container">
@@ -695,7 +695,7 @@
               <li><a href="../index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
               <li><a href="../about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
               <li><a href="../services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-              <li><a href="../services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
+              <!-- <li><a href="../services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li> -->
               <li><a href="../contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
             </ul>
           </div>
@@ -706,10 +706,12 @@
         <div class="col-md ftco-footer-widget  mb-5 ml-md-4">
           <h2 class="ftco-heading-2">Services</h2>
           <ul class="list-unstyled">
+            <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General
+              Medicine</a></li>
             <li><a href="./services/dental-services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Dental
               Care</a></li>
-          <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General
-              Medicine</a></li>
+          <!-- <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General
+              Medicine</a></li> -->
             <li><a href="./services/hair-transplantation.html"><span
                   class="ion-ios-arrow-round-forward mr-2"></span>Hair
                 Transplantation</a>
@@ -724,15 +726,9 @@
               Mon to Sun - 09 AM to 09 PM
             </h3>
           </div>
-          <div class="ftco-footer-widget mb-5">
-            <h2 class="ftco-heading-2">Subscribe Us!</h2>
-            <form action="#" class="subscribe-form">
-              <div class="form-group">
-                <input type="text" class="form-control mb-2 text-center" placeholder="Enter email address">
-                <input type="submit" value="Subscribe" class="form-control submit px-3">
-              </div>
-            </form>
-          </div>
+           <div class="ftco-footer-widget mb-5">
+            
+           </div>
         </div>
       </div>
       <div class="row">
