--- a/services/hair-transplantation.html
+++ b/services/hair-transplantation.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <div class=" top-header">
+     <div class=" top-header">
         <div class="container">
           <div class="row flex-nowrap  d-flex justify-content-between align-items-center ">
     
@@ -450,15 +450,15 @@
                     <div class="ftco-footer-widget mb-5 ml-md-4">
                         <h2 class="ftco-heading-2">Links</h2>
                         <ul class="list-unstyled">
-                            <li><a href="/index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a>
+                            <li><a href="../index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a>
                             </li>
-                            <li><a href="/about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a>
+                            <li><a href="../about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a>
                             </li>
-                            <li><a href="/services.html"><span
+                            <li><a href="../services.html"><span
                                         class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-                            <li><a href="/services.html"><span
-                                        class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
-                            <li><a href="/contact.html"><span
+                            <!-- <li><a href="/services.html"><span -->
+                                        <!-- class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li> -->
+                            <li><a href="../contact.html"><span
                                         class="ion-ios-arrow-round-forward mr-2"></span>Contact</a>
                             </li>
                         </ul>
@@ -501,14 +501,14 @@
                           </h3>
                     </div>
                     <div class="ftco-footer-widget mb-5">
-                        <h2 class="ftco-heading-2">Subscribe Us!</h2>
-                        <form action="#" class="subscribe-form">
+                        <!-- <h2 class="ftco-heading-2">Subscribe Us!</h2> -->
+                        <!-- <form action="#" class="subscribe-form">
                             <div class="form-group">
                                 <input type="text" class="form-control mb-2 text-center"
                                     placeholder="Enter email address">
                                 <input type="submit" value="Subscribe" class="form-control submit px-3">
                             </div>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
