--- a/contact.html
+++ b/contact.html
@@ -500,11 +500,11 @@
           <div class="ftco-footer-widget mb-5 ml-md-4">
             <h2 class="ftco-heading-2">Links</h2>
             <ul class="list-unstyled">
-              <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
-              <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
-              <li><a href="services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-              <li><a href="services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
-              <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
+              <li><a href="../index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
+              <li><a href="../about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
+              <li><a href="../services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
+              <!-- <li><a href="../services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li> -->
+              <li><a href="../contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
             </ul>
           </div>
           <div class="">
@@ -514,10 +514,11 @@
         <div class="col-md ftco-footer-widget  mb-5 ml-md-4">
           <h2 class="ftco-heading-2">Services</h2>
           <ul class="list-unstyled">
+            <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General
+              Medicine</a></li>
             <li><a href="./services/dental-services.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Dental
                 Care</a></li>
-            <li><a href="./services/general-medicine.html"><span class="ion-ios-arrow-round-forward mr-2"></span>General
-                Medicine</a></li>
+  
             <li><a href="./services/hair-transplantation.html"><span
                   class="ion-ios-arrow-round-forward mr-2"></span>Hair
                 Transplantation</a>
@@ -533,15 +534,7 @@
               Mon to Sun - 09 AM to 09 PM
             </h3>
           </div>
-          <div class="ftco-footer-widget mb-5">
-            <h2 class="ftco-heading-2">Subscribe Us!</h2>
-            <form action="#" class="subscribe-form">
-              <div class="form-group">
-                <input type="text" class="form-control mb-2 text-center" placeholder="Enter email address">
-                <input type="submit" value="Subscribe" class="form-control submit px-3">
-              </div>
-            </form>
-          </div>
+         
         </div>
       </div>
       <div class="row">
