--- a/services/Diagnostic-Services.html
+++ b/services/Diagnostic-Services.html
@@ -480,14 +480,14 @@
                     <div class="ftco-footer-widget mb-5 ml-md-4">
                         <h2 class="ftco-heading-2">Links</h2>
                         <ul class="list-unstyled">
-                            <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
-                            <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a>
+                            <li><a href="../index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
+                            <li><a href="../about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a>
                             </li>
-                            <li><a href="services.html"><span
+                            <li><a href="../services.html"><span
                                         class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-                            <li><a href="services.html"><span
-                                        class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
-                            <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a>
+                            <!-- <li><a href="services.html"><span -->
+                                        <!-- class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li> -->
+                            <li><a href="../contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -498,10 +498,10 @@
                 <div class="col-md ftco-footer-widget  mb-5 ml-md-4">
                     <h2 class="ftco-heading-2">Services</h2>
                     <ul class="list-unstyled">
-                        <li><a href="./orthopedic.html"><span
+                        <li><a href="./general-medicine.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>General Medicine</a>
                         </li>
-                        <li><a href="./gynecology.html"><span
+                        <li><a href="./dental-services.html"><span
                                     class="ion-ios-arrow-round-forward mr-2"></span>Dental Care</a>
                         </li>
                         <li><a href="./hair-transplantation.html"><span
@@ -524,18 +524,7 @@
                             Mon to Sun - 09 AM to 09 PM
                           </h3>
                     </div>
-                    <div class="ftco-footer-widget mb-5">
-                        <h2 class="ftco-heading-2">Subscribe Us!</h2>
-                        <form action="mailto:Medvishospital@gmail.com" class="subscribe-form">
-                            <div class="form-group">
-                                <input type="text" class="form-control mb-2 text-center"
-                                    placeholder="Enter email address">
-                                <input type="submit" value="Subscribe" class="form-control submit px-3">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
+                    
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>
