--- a/services/Preventive-Care.html
+++ b/services/Preventive-Care.html
@@ -408,8 +408,8 @@
                             </li>
                             <li><a href="../services.html"><span
                                         class="ion-ios-arrow-round-forward mr-2"></span>Services</a></li>
-                            <li><a href="../services.html"><span
-                                        class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li>
+                            <!-- <li><a href="../services.html"><span -->
+                                        <!-- class="ion-ios-arrow-round-forward mr-2"></span>Deparments</a></li> -->
                             <li><a href="../contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a>
                             </li>
                         </ul>
@@ -447,16 +447,7 @@
                             Mon to Sun - 09 AM to 09 PM
                           </h3>
                     </div>
-                    <div class="ftco-footer-widget mb-5">
-                        <h2 class="ftco-heading-2">Subscribe Us!</h2>
-                        <form action="mailto:Medvishospital@gmail.com" class="subscribe-form">
-                            <div class="form-group">
-                                <input type="text" class="form-control mb-2 text-center"
-                                    placeholder="Enter email address">
-                                <input type="submit" value="Subscribe" class="form-control submit px-3">
-                            </div>
-                        </form>
-                    </div>
+                    
                 </div>
             </div>
             <div class="row">
