--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 
     #demo-1 {
-      background: url(images/medvishero1.jpg) no-repeat;
+      background: url(images/Background-img-1.jpg) no-repeat;
       background-size: cover;
       background-position: center 10%;
       -webkit-background-size: cover;
@@ -246,7 +246,7 @@
     }
 
     #demo-2 {
-      background: url(images/medvishero.jpg) no-repeat;
+      background: url(images/Background-img-2.jpg) no-repeat;
       background-size: cover 10%;
       background-position: center;
       -webkit-background-size: cover;
@@ -393,7 +393,7 @@
         <div class="col-md-4 d-flex services align-self-stretch p-4 ftco-animate  box">
           <div class="media block-6 d-block text-center">
             <div class="icon d-flex justify-content-center align-items-center">
-              <img style="object-fit: scale-down;" src="./images/first-aid-kit.png" alt="" class="w-100" />
+              <img style="object-fit: scale-down;" src="./images/General -Medicine.jpg" alt="" class="w-100" />
             </div>
             <div class="media-body p-2 mt-3">
               <h3 class="heading">General Medicine</h3>
@@ -409,7 +409,7 @@
         <div class="col-md-4 d-flex services align-self-stretch p-4 ftco-animate  box">
           <div class="media block-6 d-block text-center">
             <div class="icon d-flex justify-content-center align-items-center">
-              <img style="object-fit: scale-down;" src="./images/dental-care.png" alt="" class="w-100" />
+              <img style="object-fit: scale-down;" src="./images/Dental- Care.jpg" alt="" class="w-100" />
             </div>
             <div class="media-body p-2 mt-3">
               <h3 class="heading">Dental Care</h3>
@@ -424,7 +424,7 @@
         <div class="col-md-4 d-flex services align-self-stretch p-4 ftco-animate  box">
           <div class="media block-6 d-block text-center">
             <div class="icon d-flex justify-content-center align-items-center">
-              <img style="object-fit: scale-down;" src="./images/hair-transplant.png" alt="" class="w-100" />
+              <img style="object-fit: scale-down;" src="./images/Hair-Transplantation.jpg" alt="" class="w-100" />
             </div>
             <div class="media-body p-2 mt-3">
               <h3 class="heading">Hair Transplantation</h3>
