--- a/services/Chronic-Disease-Management.html
+++ b/services/Chronic-Disease-Management.html
@@ -236,7 +236,7 @@
     </nav> -->
     <!-- END nav -->
 
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('../images/bg_1.jpg');"
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('../images/Genral\ Medicine\ -\ Background.jpg');"
         data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
