--- a/services/Gfc-Hair-Growth.html
+++ b/services/Gfc-Hair-Growth.html
@@ -232,7 +232,7 @@
     </nav> -->
     <!-- END nav -->
 
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('../images/Hair\ Transplantation-Background.jpg');"
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('../images/Hair\ Transplantation\ -Background-img.jpg');"
         data-stellar-background-ratio="0.5">
         <div class="overlay"></div>
         <div class="container">
